Fix notification icon spacing with layout management icon (#172)
(cherry picked from commit 8d62f260a8f3eacea3669c9f3ba017b08cecbf8e)

--- a/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/social/skin/TopBar/Style.less
@@ -50,6 +50,7 @@ body {
 
   .UITopBarContainerItemsParent {
     display: flex;
+    padding-right: 8px;
 
     .UITopBarContainerItem {
       margin: auto;
@@ -141,7 +142,6 @@ body.decrease-z-index-more #UITopBarContainer {
 
 .NotificationTopBarTDContainer {
   #NotificationPopoverPortlet {
-    margin-right: 10px;
     .container.white{
       width: auto!important;
     }
